--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,9 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-
+bootRun{
+	jvmArgs '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005'
+}
 
 jar {
 	enabled = false
